<resources>
    <string name="app_name">Угадай число</string>


    <string name="gameName_guessNumber">Угадай число</string>

    <!--Dialog and GuessNumberActivity-->
    <string name="title">Описание</string>
    <string name="message">Игра угадай число заданное системой в диапазоне от 0 до 9. Для этого у Вас есть три попытки.</string>
    <string name="positive">Далее</string>
    <string name="text2">Для начала игры нажмите - Старт</string>

    <!-- Context menu-->
    <string name="contextMenuAnswer">Ответ</string>
    <string name="contextMenuAnswerToast">Правильный ответ</string>
    <string name="contextMenuStatistic">Обнулить статистику</string>
    <string name="contextMenuStatisticToast">Статистика обнулена</string>

    <!-- Options menu-->
    <string name="menuHelp">Подсказка</string>
    <string name="menuHelp_h">Четное число</string>
    <string name="menuHelp_nh">Нечетное число</string>

    <string name="menuStatisticAll">Вся статистика</string>
    <string name="allStatisticAll">"Всего сыграно игр: "</string>
    <string name="allStatisticPoz">"Из них выиграно:  "</string>
    <string name="allStatisticNeg">"Из них проиграно: "</string>

    <string name="menuStatistic">Текущая статистика</string>
    <string name="currentStatisticAll">"Сыграно игр:   "</string>
    <string name="currentStatisticPoz">"Выиграно игр:  "</string>
    <string name="currentStatisticNeg">"Проиграно игр: "</string>

    <string name="menuSettings">Настройки</string>

    <string name="menuDescription">Описание игры</string>
    <string name="menuDescriptionAnswer">Игра угадай число заданное системой в диапазоне от 0 до 9.
                                         Для этого у Вас есть три попытки.</string>

    <!-- The text of the notification to the user -->
    <string name="textStart">Приймите решение.</string>
    <string name="textYes">Угадал !!! :) \nВы просто гений!</string>
    <string name="attempt2">Не угадал !!! \nУ Вас осталось две попытки.</string>
    <string name="attempt1">Не угадал !!! \nУ Вас осталась одна попытка.</string>
    <string name="attempt0">Количество попыток закончилось! \nПравильный ответ</string>
    <string name="giveUp">Вы сдались! \nПравильный ответ</string>

    <!-- Settings -->
    <string name="settings">Настройки</string>

    <string name="idTheme">idTheme</string>
    <string name="idKeyboard">idKeyboard</string>
    <string name="idColorTextView">textColorTextView</string>

    <string name="set">Применить</string>
    <string name="groupBackground">Оформление</string>
    <string name="itemGroupThemeApp">Тема приложения</string>

    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="start">Старт</string>
    <string name="_0">0</string>
    <string name="i_give_up">Сдаюсь</string>

 </resources>