<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/activity_guess_number"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="polokhachsergey.game.GuessNumberActivity">

    <ImageView
        android:alpha="1"
        android:scaleType="centerCrop"
        android:src="?attr/Background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription"
        android:layout_alignParentTop="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:padding="10dp"
        android:paddingStart="10dp">

        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:id="@+id/ivGuessNumberActivity"
            android:layout_above="@+id/tableLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="61dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvGuessNumberActivity"
            android:textAlignment="center"
            android:textSize="26sp"
            android:text="@string/text2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="vertical"
            android:id="@+id/tableLayout">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:text="@string/_1"
                    android:id="@+id/btn_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="?attr/NEB_weight"
                    android:textColor="?attr/NEB_textColor"
                    android:textSize="22sp"
                    style="?attr/Style"
                    android:textStyle="bold"/>

                <Button
                    android:text="@string/_2"
                    android:id="@+id/btn_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="?attr/EB_weight"
                    android:textColor="?attr/EB_textColor"
                    android:textSize="22sp"
                    style="?attr/Style"
                    android:textStyle="bold"/>

                <Button
                    android:text="@string/_3"
                    android:id="@+id/btn_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="?attr/NEB_weight"
                    android:textColor="?attr/NEB_textColor"
                    android:textSize="22sp"
                    style="?attr/Style"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:text="@string/_4"
                    android:id="@+id/btn_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="?attr/EB_weight"
                    android:textColor="?attr/EB_textColor"
                    android:textSize="22sp"
                    style="?attr/Style"
                    android:textStyle="bold"/>

                <Button
                    android:text="@string/_5"
                    android:id="@+id/btn_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="?attr/NEB_weight"
                    android:textColor="?attr/NEB_textColor"
                    android:textSize="22sp"
                    style="?attr/Style"
                    android:textStyle="bold"/>

                <Button
                    android:text="@string/_6"
                    android:id="@+id/btn_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="?attr/EB_weight"
                    android:textColor="?attr/EB_textColor"
                    android:textSize="22sp"
                    style="?attr/Style"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:text="@string/_7"
                    android:id="@+id/btn_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="?attr/NEB_weight"
                    android:textColor="?attr/NEB_textColor"
                    android:textSize="22sp"
                    style="?attr/Style"
                    android:textStyle="bold"/>

                <Button
                    android:text="@string/_8"
                    android:id="@+id/btn_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="?attr/EB_weight"
                    android:textColor="?attr/EB_textColor"
                    android:textSize="22sp"
                    style="?attr/Style"
                    android:textStyle="bold"/>

                <Button
                    android:text="@string/_9"
                    android:id="@+id/btn_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="?attr/NEB_weight"
                    android:textColor="?attr/NEB_textColor"
                    android:textSize="22sp"
                    style="?attr/Style"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:text="@string/start"
                    android:id="@+id/btn_Start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="?attr/CB_weight"
                    android:textColor="?attr/CB_textColor"
                    android:textSize="22sp"
                    style="?attr/Style"
                    android:textStyle="bold"/>

                <Button
                    android:text="@string/_0"
                    android:id="@+id/btn_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="?attr/EB_weight"
                    android:textColor="?attr/EB_textColor"
                    android:textSize="22sp"
                    style="?attr/Style"
                    android:textStyle="bold"/>

                <Button
                    android:text="@string/i_give_up"
                    android:id="@+id/btn_GiveUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="?attr/CB_weight"
                    android:textColor="?attr/CB_textColor"
                    android:textSize="22sp"
                    style="?attr/Style"
                    android:textStyle="bold"/>
            </TableRow>
        </TableLayout>
    </RelativeLayout>

</RelativeLayout>